Fixed ATBT (#6)
* Tesitmonials
* Teaching Methods done
* Will My Child Actually Learn Updated
* Fixed prettier stuff.
* Fixed Image portions
* Done right formatting
* Yet to be changed
* Fixes done.
* Fixed WMCAL.
* Fixed the horizontal scrollbar.

--- a/src/styles/ATBT/_ATBTEasyApply.scss
+++ b/src/styles/ATBT/_ATBTEasyApply.scss
@@ -45,4 +45,57 @@
       }
     }
   }
+  @media screen and (max-width: 575px) {
+    width: 100%;
+    margin: 0 auto 0px;
+    h2 {
+      font-size: 3.2em;
+      font-weight: 600;
+      letter-spacing: -1.12px;
+      line-height: 1.3;
+      text-align: center;
+      margin: 0 0 75px;
+    }
+    &-Steps {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-evenly;
+      &-Item {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        padding: 0 32px;
+        text-align: center;
+        align-items: center;
+        h3 {
+          flex: 1;
+        }
+        p {
+          font-size: 1.8em;
+          letter-spacing: -0.4px;
+          line-height: 1.44;
+          flex: 1;
+        }
+        &-Index,
+        h3 {
+          font-weight: 600;
+        }
+        &-Index {
+          background-color: $seance;
+          color: $white;
+          width: 48px;
+          height: 48px;
+          line-height: 48px;
+          text-align: center;
+          border-radius: 100%;
+        }
+        h3 {
+          margin: 15px 0 25px;
+        }
+        p {
+          letter-spacing: 0.18px;
+        }
+      }
+    }
+  }
 }
