--- a/src/styles/ATBT/_ATBTIntro.scss
+++ b/src/styles/ATBT/_ATBTIntro.scss
@@ -12,4 +12,21 @@
       margin: 0 0 25px;
     }
   }
+  @media screen and (max-width: 575px) {
+    margin: 50px 0 0;
+    .About-Intro {
+      width: 100%;
+      margin: 0 0 80px;
+      h2 {
+        font-size: 3.2em;
+        line-height: 1.3;
+        letter-spacing: -0.72px;
+      }
+      &-Image {
+        img {
+          width: 330px;
+        }
+      }
+    }
+  }
 }
