--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -22,6 +22,9 @@ body {
     max-width: 100%;
   }
   .App {
+    @media screen and (max-width: 575px) {
+      overflow-x: hidden;
+    }
     @import "Overrides";
     @import "Utils";
     @import "Shared/Sprites";
