--- a/src/styles/WMCAL/_WMCALBlogs.scss
+++ b/src/styles/WMCAL/_WMCALBlogs.scss
@@ -7,9 +7,10 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    margin: 30px 0;
+    margin: 30px 0 7em;
+    padding: 16px;
     .BlogPost {
-      margin: 0 16px 60px;
+      margin-bottom: 30px;
     }
   }
 }
