--- a/src/styles/WMCAL/_WMCALIntro.scss
+++ b/src/styles/WMCAL/_WMCALIntro.scss
@@ -79,7 +79,7 @@
       flex-grow: 1;
       border-radius: 70px 0 0 70px;
       margin-left: 15px;
-      margin-right: 0;
+      margin-right: -85px;
       img {
         position: relative;
         margin-top: -50px;
@@ -87,7 +87,7 @@
         left: 45%;
         padding-left: 22px;
         width: 330px;
-        margin-left: -150px;
+        margin-left: -200px;
       }
     }
   }
