--- a/src/styles/_Overrides.scss
+++ b/src/styles/_Overrides.scss
@@ -1,5 +1,8 @@
 .slick-dots {
   bottom: -50px;
+  @media screen and (max-width: 575px) {
+    bottom: 0;
+  }
   li {
     button {
       &::before {
